<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/user">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/Update"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_directions_black_24dp"
            android:title="@string/title_map" />

    </group>

    <group android:id="@+id/officer">

        <item
            android:id="@id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/navigation_maps"
            android:icon="@drawable/ic_directions_black_24dp"
            android:title="@string/title_map" />

    </group>

</menu>